add test, reformat table to int

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "1cab2d73-ca4b-4c90-b0e2-db940c0cd198",
    "metadata": {},
    "outputs": [
@@ -284,33 +284,50 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>Observed</th>\n",
        "      <th>Positive</th>\n",
        "      <th>Negative</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Forecast</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Positive</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Negative</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Positive  Negative\n",
-       "Positive       5.0       1.0\n",
-       "Negative       1.0      11.0"
+       "Observed  Positive  Negative  Total\n",
+       "Forecast                           \n",
+       "Positive         5         1      6\n",
+       "Negative         1        11     12\n",
+       "Total            6        12     18"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "17f971df-7d39-4ddd-9a9b-98b88e9a71dc",
    "metadata": {},
    "outputs": [
@@ -370,13 +387,14 @@
        "  --xr-background-color-row-odd: var(--jp-layout-color2, #eeeeee);\n",
        "}\n",
        "\n",
-       "html[theme=dark],\n",
-       "body[data-theme=dark],\n",
+       "html[theme=\"dark\"],\n",
+       "html[data-theme=\"dark\"],\n",
+       "body[data-theme=\"dark\"],\n",
        "body.vscode-dark {\n",
        "  --xr-font-color0: rgba(255, 255, 255, 1);\n",
        "  --xr-font-color2: rgba(255, 255, 255, 0.54);\n",
        "  --xr-font-color3: rgba(255, 255, 255, 0.38);\n",
-       "  --xr-border-color: #1F1F1F;\n",
+       "  --xr-border-color: #1f1f1f;\n",
        "  --xr-disabled-color: #515151;\n",
        "  --xr-background-color: #111111;\n",
        "  --xr-background-color-row-even: #111111;\n",
@@ -421,7 +439,7 @@
        ".xr-sections {\n",
        "  padding-left: 0 !important;\n",
        "  display: grid;\n",
-       "  grid-template-columns: 150px auto auto 1fr 20px 20px;\n",
+       "  grid-template-columns: 150px auto auto 1fr 0 20px 0 20px;\n",
        "}\n",
        "\n",
        ".xr-section-item {\n",
@@ -429,7 +447,9 @@
        "}\n",
        "\n",
        ".xr-section-item input {\n",
-       "  display: none;\n",
+       "  display: inline-block;\n",
+       "  opacity: 0;\n",
+       "  height: 0;\n",
        "}\n",
        "\n",
        ".xr-section-item input + label {\n",
@@ -439,6 +459,10 @@
        ".xr-section-item input:enabled + label {\n",
        "  cursor: pointer;\n",
        "  color: var(--xr-font-color2);\n",
+       "}\n",
+       "\n",
+       ".xr-section-item input:focus + label {\n",
+       "  border: 2px solid var(--xr-font-color0);\n",
        "}\n",
        "\n",
        ".xr-section-item input:enabled + label:hover {\n",
@@ -462,7 +486,7 @@
        "\n",
        ".xr-section-summary-in + label:before {\n",
        "  display: inline-block;\n",
-       "  content: '►';\n",
+       "  content: \"►\";\n",
        "  font-size: 11px;\n",
        "  width: 15px;\n",
        "  text-align: center;\n",
@@ -473,7 +497,7 @@
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label:before {\n",
-       "  content: '▼';\n",
+       "  content: \"▼\";\n",
        "}\n",
        "\n",
        ".xr-section-summary-in:checked + label > span {\n",
@@ -545,15 +569,15 @@
        "}\n",
        "\n",
        ".xr-dim-list:before {\n",
-       "  content: '(';\n",
+       "  content: \"(\";\n",
        "}\n",
        "\n",
        ".xr-dim-list:after {\n",
-       "  content: ')';\n",
+       "  content: \")\";\n",
        "}\n",
        "\n",
        ".xr-dim-list li:not(:last-child):after {\n",
-       "  content: ',';\n",
+       "  content: \",\";\n",
        "  padding-right: 5px;\n",
        "}\n",
        "\n",
@@ -706,8 +730,8 @@
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray (contingency: 5)&gt; Size: 40B\n",
        "array([ 5., 11.,  1.,  1., 18.])\n",
        "Coordinates:\n",
-       "  * contingency  (contingency) &lt;U11 220B &#x27;tp_count&#x27; &#x27;tn_count&#x27; ... &#x27;total_count&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>contingency</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-57231058-47b4-4ea1-8bb0-1c78c46e6f2a' class='xr-array-in' type='checkbox' checked><label for='section-57231058-47b4-4ea1-8bb0-1c78c46e6f2a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>5.0 11.0 1.0 1.0 18.0</span></div><div class='xr-array-data'><pre>array([ 5., 11.,  1.,  1., 18.])</pre></div></div></li><li class='xr-section-item'><input id='section-5a398297-2b87-4f7e-8fcb-f4d38ec6b54e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-5a398297-2b87-4f7e-8fcb-f4d38ec6b54e' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>contingency</span></div><div class='xr-var-dims'>(contingency)</div><div class='xr-var-dtype'>&lt;U11</div><div class='xr-var-preview xr-preview'>&#x27;tp_count&#x27; ... &#x27;total_count&#x27;</div><input id='attrs-eae76497-b7e3-4a4a-a574-ef68b19ea25a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-eae76497-b7e3-4a4a-a574-ef68b19ea25a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-744f8b3a-64df-4b09-aa1a-8220745aa93c' class='xr-var-data-in' type='checkbox'><label for='data-744f8b3a-64df-4b09-aa1a-8220745aa93c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;tp_count&#x27;, &#x27;tn_count&#x27;, &#x27;fp_count&#x27;, &#x27;fn_count&#x27;, &#x27;total_count&#x27;],\n",
-       "      dtype=&#x27;&lt;U11&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-f91a53b1-cf0c-4c54-a21f-25cae8149b98' class='xr-section-summary-in' type='checkbox'  ><label for='section-f91a53b1-cf0c-4c54-a21f-25cae8149b98' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>contingency</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-72d8b2b9-6fcc-47bd-b689-20c4fe9bc0db' class='xr-index-data-in' type='checkbox'/><label for='index-72d8b2b9-6fcc-47bd-b689-20c4fe9bc0db' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;tp_count&#x27;, &#x27;tn_count&#x27;, &#x27;fp_count&#x27;, &#x27;fn_count&#x27;, &#x27;total_count&#x27;], dtype=&#x27;object&#x27;, name=&#x27;contingency&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-2c7bf9b4-3d6d-4841-8e4f-f8ae8b6f4207' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-2c7bf9b4-3d6d-4841-8e4f-f8ae8b6f4207' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "  * contingency  (contingency) &lt;U11 220B &#x27;tp_count&#x27; &#x27;tn_count&#x27; ... &#x27;total_count&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>contingency</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-44ade0b1-7107-48b5-bd98-06eed08f4069' class='xr-array-in' type='checkbox' checked><label for='section-44ade0b1-7107-48b5-bd98-06eed08f4069' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>5.0 11.0 1.0 1.0 18.0</span></div><div class='xr-array-data'><pre>array([ 5., 11.,  1.,  1., 18.])</pre></div></div></li><li class='xr-section-item'><input id='section-4a18e642-3f86-4302-b039-4389801d626b' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4a18e642-3f86-4302-b039-4389801d626b' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>contingency</span></div><div class='xr-var-dims'>(contingency)</div><div class='xr-var-dtype'>&lt;U11</div><div class='xr-var-preview xr-preview'>&#x27;tp_count&#x27; ... &#x27;total_count&#x27;</div><input id='attrs-c49ad043-34ca-498c-9df4-d58727a62323' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c49ad043-34ca-498c-9df4-d58727a62323' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ef1a89da-165b-4a4d-8504-5020762d86fe' class='xr-var-data-in' type='checkbox'><label for='data-ef1a89da-165b-4a4d-8504-5020762d86fe' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;tp_count&#x27;, &#x27;tn_count&#x27;, &#x27;fp_count&#x27;, &#x27;fn_count&#x27;, &#x27;total_count&#x27;],\n",
+       "      dtype=&#x27;&lt;U11&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e1c1bc5e-f52d-486c-9def-05ca2f7d1d35' class='xr-section-summary-in' type='checkbox'  ><label for='section-e1c1bc5e-f52d-486c-9def-05ca2f7d1d35' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>contingency</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-0c3f9c8a-682f-4d53-b896-a2b98ef0c060' class='xr-index-data-in' type='checkbox'/><label for='index-0c3f9c8a-682f-4d53-b896-a2b98ef0c060' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;tp_count&#x27;, &#x27;tn_count&#x27;, &#x27;fp_count&#x27;, &#x27;fn_count&#x27;, &#x27;total_count&#x27;], dtype=&#x27;object&#x27;, name=&#x27;contingency&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-480efa53-993c-4a84-9ef7-c64fab6a4bc6' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-480efa53-993c-4a84-9ef7-c64fab6a4bc6' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray (contingency: 5)> Size: 40B\n",
@@ -2806,7 +2830,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "test_env",
    "language": "python",
    "name": "python3"
   },
@@ -2820,7 +2844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
