--- a/tutorials/Risk_Matrix_Score.ipynb
+++ b/tutorials/Risk_Matrix_Score.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# The Risk Matrix Score\n",
     "\n",
+    "\n",
+    "> **CAUTION:**\n",
+    "> This is an emerging score that is under development and has not yet been peer-reviewed. It may change at any time.\n",
+    "\n",
     "The Risk Matrix Score provides a consistent way of scoring forecasts and warnings within a risk matrix framework (Taggart & Wilke 2024). A lower score is better.\n",
     "\n",
     "In this tutorial we will illustrate the risk matrix framework using a slimmed down version of the synthetic case study from Taggart & Wilke (2024).\n",
