--- a/tutorials/Brier_Score.ipynb
+++ b/tutorials/Brier_Score.ipynb
@@ -4,11 +4,11 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Brier score\n",
+                "# Brier Score\n",
                 "\n",
                 "The Brier score is the most commonly used verification metric for evaluating a probability of a binary outcome forecast, such as a \"chance of rainfall\" forecast.\n",
                 "\n",
-                "Probabilistic forecasts can be expressed as values between 0 and 1, or they could be expressed as an ensemble. We can use Scores to evaluate both kinds of forecasts.\n",
+                "Probabilistic forecasts can be expressed as values between 0 and 1, or they could be expressed as an ensemble. We can use `scores` to evaluate both kinds of forecasts.\n",
                 "\n",
                 "## Using the Brier score to evaluate probabilistic forecasts (expressed as values between 0 and 1) of binary events\n",
                 "\n",
@@ -24,7 +24,7 @@
                 "- $x$ is the forecast between 0 and 1, and \n",
                 "- $y$ is the observation which is either 0 or 1.\n",
                 "\n",
-                "The Brier score is a [strictly proper scoring rule](https://sites.stat.washington.edu/people/raftery/Research/PDF/Gneiting2007jasa.pdf) where lower values are better (it is negatively oriented) where a perfect score is 0 and the worst score is 1.\n"
+                "The Brier score is a [strictly proper scoring rule](https://sites.stat.washington.edu/people/raftery/Research/PDF/Gneiting2007jasa.pdf) where lower values are better (it is negatively oriented), where a perfect score is 0 and the worst score is 1.\n"
             ]
         },
         {
@@ -48,7 +48,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# To learn more about the implemenation of the Brier score, uncomment the following\n",
+                "# To learn more about the implementation of the Brier score, uncomment the following\n",
                 "# help(brier_score)"
             ]
         },
@@ -56,7 +56,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "We generate two synthetic forecasts. By design, `fcst1` is a good forecast, while `fcst2` is a poor forecast. We measure the difference in skill by calculating and comparing their Brier Scores."
+                "We generate two synthetic forecasts. By design, `fcst1` is a good forecast, while `fcst2` is a poor forecast. We measure the difference in skill by calculating and comparing their Brier scores."
             ]
         },
         {
@@ -65,7 +65,6 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "\n",
                 "fcst1 = beta.rvs(2, 1, size=1000)\n",
                 "obs = binom.rvs(1, fcst1)\n",
                 "fcst2 = beta.rvs(0.5, 1, size=1000)\n",
@@ -100,7 +99,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "As expected, fcst1 has the lower Brier Score quantifying the degree to which it is better than fcst2."
+                "As expected, `fcst1` has the lower Brier score quantifying the degree to which it is better than fcst2."
             ]
         },
         {
@@ -120,7 +119,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Scores can also be used to evaluate ensembles using the Brier score. By default, it calculates the fair Brier score which is defined as\n",
+                "`scores` can also be used to evaluate ensembles using the Brier score. By default, it calculates the fair Brier score which is defined as\n",
                 "\n",
                 "$$s_{i,y} = \\left(\\frac{i}{m} - y\\right)^2 - \\frac{i(m-i)}{m^2(m-1)}$$\n",
                 "\n",
@@ -137,7 +136,7 @@
                 "\n",
                 "The use of the Brier score without the fair adjustment may favour ensembles that have members that have the behaviour of being sampled from a different distribution than the observations. For more information, see [Ferro (2014)](https://doi.org/10.1002/qj.2270).\n",
                 "\n",
-                "Let's first do a synthetic experiment with 10,000 timesteps to demonstrate the impact of the fair correction using the scores function. Suppose the observations are randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.5$. Let's now create two ensemble forecasts. The first (we will call `fcst1`) has 2 ensemble members where the value for each member is randomly drawn from the same distribution that the observations are drawn from and is an ideal forecast. The second ensemble (called `fcst2`) has 20 ensemble members but is biased. The value for each member is randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.4$.\n",
+                "Let's first do a synthetic experiment with 10,000 timesteps to demonstrate the impact of the fair correction using the `scores` function. Suppose the observations are randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.5$. Let's now create two ensemble forecasts. The first (we will call `fcst_a`) has 2 ensemble members where the value for each member is randomly drawn from the same distribution that the observations are drawn from and is an ideal forecast. The second ensemble (called `fcst_b`) has 20 ensemble members but is biased. The value for each member is randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.4$.\n",
                 "\n",
                 "Let's now calculate the Brier score with and without the fair adjustment."
             ]
@@ -151,7 +150,7 @@
                 "from scores.probability import brier_score_for_ensemble\n",
                 "\n",
                 "# Uncomment the following line to learn more about the ensemble Brier score\n",
-                "#help(ensemble_brier_score)\n",
+                "# help(brier_score_for_ensemble)\n",
                 "\n",
                 "N = 10000\n",
                 "M1 = 2\n",
@@ -160,13 +159,13 @@
                 "time = np.arange(N)\n",
                 "obs = xr.DataArray(obs, dims=[\"time\"], coords={\"time\": time})\n",
                 "\n",
-                "fcst1 = np.random.choice([0, 1], size=(M1, N), p=[0.5, 0.5])\n",
+                "fcst_a = np.random.choice([0, 1], size=(M1, N), p=[0.5, 0.5])\n",
                 "ensemble = np.arange(M1)\n",
-                "fcst1 = xr.DataArray(fcst1, dims=[\"ensemble\", \"time\"], coords={\"ensemble\": ensemble, \"time\": time})\n",
+                "fcst_a = xr.DataArray(fcst_a, dims=[\"ensemble\", \"time\"], coords={\"ensemble\": ensemble, \"time\": time})\n",
                 "\n",
-                "fcst2 = np.random.choice([0, 1], size=(M2, N), p=[0.6, 0.4])\n",
+                "fcst_b = np.random.choice([0, 1], size=(M2, N), p=[0.6, 0.4])\n",
                 "ensemble = np.arange(M2)\n",
-                "fcst2 = xr.DataArray(fcst2, dims=[\"ensemble\", \"time\"], coords={\"ensemble\": ensemble, \"time\": time})"
+                "fcst_b = xr.DataArray(fcst_b, dims=[\"ensemble\", \"time\"], coords={\"ensemble\": ensemble, \"time\": time})"
             ]
         },
         {
@@ -565,7 +564,7 @@
                 }
             ],
             "source": [
-                "brier_score_for_ensemble(fcst1, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\")"
+                "brier_score_for_ensemble(fcst_a, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\")"
             ]
         },
         {
@@ -957,14 +956,14 @@
                 }
             ],
             "source": [
-                "brier_score_for_ensemble(fcst2, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\")"
+                "brier_score_for_ensemble(fcst_b, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\")"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "As expected, `fcst1` had a lower (better) Brier score than `fcst2`. Now, let's calculate the Brier score without the fair adjustment."
+                "As expected, `fcst_a` had a lower (better) Brier score than `fcst_b`. Now, let's calculate the Brier score without the fair adjustment."
             ]
         },
         {
@@ -1356,7 +1355,7 @@
                 }
             ],
             "source": [
-                "brier_score_for_ensemble(fcst1, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\", fair_correction=False)"
+                "brier_score_for_ensemble(fcst_a, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\", fair_correction=False)"
             ]
         },
         {
@@ -1748,16 +1747,16 @@
                 }
             ],
             "source": [
-                "brier_score_for_ensemble(fcst2, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\", fair_correction=False)"
+                "brier_score_for_ensemble(fcst_b, obs, event_thresholds=0.5, ensemble_member_dim=\"ensemble\", fair_correction=False)"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Now it has ranked the biased `fcst2` much better than `fcst1`. This shows the importance of using fair scores with ensembles to avoid getting misleading results!\n",
+                "We can see that not using the fair correction with `brier_score_for_ensemble` ranked the biased `fcst_a` much better than `fcst_b`. This shows the importance of using fair scores with ensembles to avoid getting misleading results!\n",
                 "\n",
-                "**Note**, if an ensemble is passed into the function only one ensemble member, the un-adjusted Brier score is returned in order to avoid a divide by zero error."
+                "**Note**, if an ensemble is passed into the function with only one ensemble member, the un-adjusted Brier score is returned in order to avoid a divide by zero error."
             ]
         },
         {
@@ -2157,7 +2156,7 @@
                 }
             ],
             "source": [
-                "brier_score_for_ensemble(fcst1, obs, event_thresholds=[-1, 0.5, 1, 3], ensemble_member_dim=\"ensemble\")"
+                "brier_score_for_ensemble(fcst_a, obs, event_thresholds=[-1, 0.5, 1, 3], ensemble_member_dim=\"ensemble\")"
             ]
         },
         {
