--- a/tutorials/Brier_Score.ipynb
+++ b/tutorials/Brier_Score.ipynb
@@ -99,7 +99,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "As expected, `fcst1` has the lower Brier score quantifying the degree to which it is better than fcst2."
+                "As expected, `fcst1` has the lower Brier score quantifying the degree to which it is better than `fcst2`."
             ]
         },
         {
