--- a/tutorials/Brier_Score.ipynb
+++ b/tutorials/Brier_Score.ipynb
@@ -2171,7 +2171,7 @@
                 "\n",
                 "### References\n",
                 "\n",
-                "- Brier, G.W., 1950. Verification of forecasts expressed in terms of probability. Monthly weather review, 78(1), 1-3. [https://doi.org/10.1175/1520-0493(1950)078<0001:VOFEIT>2.0.CO;2](https://doi.org/10.1175/1520-0493(1950)078<0001:VOFEIT>2.0.CO;2)\n",
+                "- Brier, G. W. (1950). Verification of forecasts expressed in terms of probability. Monthly Weather Review, 78(1), 1-3. [https://doi.org/fp62r6](https://doi.org/fp62r6)\n",
                 "- Ferro, C. A. T. (2013). Fair scores for ensemble forecasts. Quarterly Journal of the Royal Meteorological Society, 140(683), 1917–1923. https://doi.org/10.1002/qj.2270"
             ]
         },
