minor changes in response to review from SC, NL, TL

--- a/tutorials/Risk_Matrix_Score.ipynb
+++ b/tutorials/Risk_Matrix_Score.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "This experiment is repeated independently 10000 times.\n",
     "\n",
-    "We will now implement this in python. In order to calculate the risk matrix score:\n",
+    "We will now implement this in Python. In order to calculate the risk matrix score:\n",
     "\n",
     "- the observations need to be a `1` if the observation lies in the severity category and `0` if not\n",
     "- the forecasts needs to be in the form of a probability that the observation lies in the severity category.\n",
@@ -1811,7 +1811,7 @@
    "source": [
     "A lower score is better, so SynopticSally has done best overall, followed by SeasonalSam then NeverWarnNate. This is to be expected because SynopticSally makes predictions based on better information than the other forecasters.\n",
     "\n",
-    "We now calculate at the risk matrix score, but where we only put weights on decision points that affect the final warning level outcome. To do this, we need to generate the weight matrix based on the warning scaling (i.e., the colouring scheme in the risk matrix) and on supplied assessment weights. Assessment weights indicate the importance of discriminating between the different warning level decision points. We are going to choose assessment weights of (1, 2, 3), which puts a weight of\n",
+    "We now calculate the risk matrix score, but where we only put weights on decision points that affect the final warning level outcome. To do this, we need to generate the weight matrix based on the warning scaling (i.e., the colouring scheme in the risk matrix) and on supplied assessment weights. Assessment weights indicate the importance of discriminating between the different warning level decision points. We are going to choose assessment weights of (1, 2, 3), which puts a weight of\n",
     "\n",
     "- `1` for accurately discriminating between Nil Warning and Yellow Warning (or higher)\n",
     "- `2` for accurately discriminating between Yellow Warning (or lower) and Orange Warning (or higher)\n",
@@ -2661,11 +2661,11 @@
     "\n",
     "## Things to try next\n",
     "\n",
-    "Try adding a two new forecasters to the mix. The first new forecaster doubles SynopticSally's probability forecasts (clipped at 1), while the second new forecaster halves SynopticSally's probability forecasts. How do you think these new forecasters will rank (using the risk matrix score) compared with SeasonalSam? Can you find two different `decision_weights` that result in different rankings among the forecasters?\n",
+    "Try adding two new forecasters to the mix. The first new forecaster doubles SynopticSally's probability forecasts (clipped at 1), while the second new forecaster halves SynopticSally's probability forecasts. How do you think these new forecasters will rank (using the risk matrix score) compared with SeasonalSam? Can you find two different `decision_weights` that result in different rankings among the forecasters?\n",
     "\n",
     "## Reference\n",
     "\n",
-    "Taggart, R. J. & Wilke, D. J., Consistent evaluation of warnings that are based on risk matrices (2024). In preparation."
+    "Taggart, R. J. & Wilke, D. J. (2024), Warnings based on risk matrices: a coherent framework with consistent evaluation. In preparation."
    ]
   }
  ],
