--- a/tutorials/Risk_Matrix_Score.ipynb
+++ b/tutorials/Risk_Matrix_Score.ipynb
@@ -2665,7 +2665,7 @@
     "\n",
     "## Reference\n",
     "\n",
-    "Taggart, R. J. & Wilke, D. J. (2024), Warnings based on risk matrices: a coherent framework with consistent evaluation. In preparation."
+    "Taggart, R. J. & Wilke, D. J. (2024). Warnings based on risk matrices: a coherent framework with consistent evaluation. In preparation."
    ]
   }
  ],
