--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -160,6 +160,10 @@
    "cell_type": "markdown",
    "id": "002323e9-0e61-449d-a0c5-950948bec4be",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": [
      "nbsphinx-gallery"
     ]
@@ -170,8 +174,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ae976a7",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "## Emerging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef3d627a",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
+    "- [Risk Matrix Score](./Risk_Matrix_Score.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3af91021-80ab-4d0c-bc81-b13f5e039ec0",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Other"
    ]
@@ -180,6 +220,10 @@
    "cell_type": "markdown",
    "id": "6e1ed380",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": [
      "nbsphinx-gallery"
     ]
@@ -190,12 +234,6 @@
     "- [Angular Data](./Angular_data.ipynb)\n",
     "- [Introduction to Pandas API](./Pandas_API.ipynb)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5051d7d2",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
