minor tweaks to tutorial

--- a/tutorials/Brier_Score.ipynb
+++ b/tutorials/Brier_Score.ipynb
@@ -136,7 +136,7 @@
                 "\n",
                 "The use of the Brier score without the fair adjustment may favour ensembles that have members that have the behaviour of being sampled from a different distribution than the observations. For more information, see [Ferro (2014)](https://doi.org/10.1002/qj.2270).\n",
                 "\n",
-                "Let's first do a synthetic experiment with 10,000 timesteps to demonstrate the impact of the fair correction using the `scores` function. Suppose the observations are randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.5$. Let's now create two ensemble forecasts. The first (we will call `fcst_a`) has 2 ensemble members where the value for each member is randomly drawn from the same distribution that the observations are drawn from and is an ideal forecast. The second ensemble (called `fcst_b`) has 20 ensemble members but is biased. The value for each member is randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.4$.\n",
+                "Let's first do a synthetic experiment with 10,000 timesteps to demonstrate the impact of the fair correction using the `scores.probability.brier_score_for_ensemble` function. Suppose the observations are randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.5$. Let's now create two ensemble forecasts. The first (we will call `fcst_a`) has 2 ensemble members where the value for each member is randomly drawn from the same distribution that the observations are drawn from and is an ideal forecast. The second ensemble (called `fcst_b`) has 20 ensemble members but is biased. The value for each member is randomly drawn from the distribution $\\mathrm{Pr}(y=1) = 0.4$.\n",
                 "\n",
                 "Let's now calculate the Brier score with and without the fair adjustment."
             ]
@@ -1754,7 +1754,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "We can see that not using the fair correction with `brier_score_for_ensemble` ranked the biased `fcst_a` much better than `fcst_b`. This shows the importance of using fair scores with ensembles to avoid getting misleading results!\n",
+                "We can see that not using the fair correction with `brier_score_for_ensemble` ranked the biased `fcst_b` much better than `fcst_a`. This shows the importance of using fair scores with ensembles to avoid getting misleading results!\n",
                 "\n",
                 "**Note**, if an ensemble is passed into the function with only one ensemble member, the un-adjusted Brier score is returned in order to avoid a divide by zero error."
             ]
