Adjust capitalisation of risk matrix score

--- a/tutorials/Risk_Matrix_Score.ipynb
+++ b/tutorials/Risk_Matrix_Score.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "\n",
     "> **CAUTION:**\n",
-    "> The Risk Matrix Score is a novel metric that is still undergoing mathematical peer review. The implementation may change in line with the peer review process.\n",
+    "> The risk matrix score is a novel metric that is still undergoing mathematical peer review. The implementation may change in line with the peer review process.\n",
     "\n",
     "The Risk Matrix Score provides a consistent way of scoring forecasts and warnings within a risk matrix framework (Taggart & Wilke 2024). A lower score is better.\n",
     "\n",
