Update and add admonitions for emerging metrics (#794)
* Update admonitions for emerging metrics in API, tutorial and README, plus add an admonition to included page in docs

--- a/tutorials/Risk_Matrix_Score.ipynb
+++ b/tutorials/Risk_Matrix_Score.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "\n",
     "> **CAUTION:**\n",
-    "> This is an emerging score that is under development and has not yet been peer-reviewed. It may change at any time.\n",
+    "> The risk matrix score is a novel metric that is still undergoing mathematical peer review. The implementation may change in line with the peer review process.\n",
     "\n",
     "The Risk Matrix Score provides a consistent way of scoring forecasts and warnings within a risk matrix framework (Taggart & Wilke 2024). A lower score is better.\n",
     "\n",
