updated to say that the area squared is the CRPS

--- a/tutorials/CRPS_for_Ensembles.ipynb
+++ b/tutorials/CRPS_for_Ensembles.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "# The ensemble forecast can be converted to a CDF\n",
     "# When converted in a naive way we get the empirical CDF illustrated here. The larger the ensemble the smoother and more sensible this will be.\n",
-    "# The plot below also shows the CDF corresponding to the observation, and the area corrsponding to the CRPS.\n",
+    "# The plot below also shows the CDF corresponding to the observation. The area squared corresponds to the CRPS.\n",
     "fcst_thresholds = numpy.linspace(0, 7, 700)\n",
     "empirical_cdf = xarray.DataArray(\n",
     "    coords={\"temperature\": fcst_thresholds},\n",
