added seeps tutorial

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -104,8 +104,9 @@
     ]
    },
    "source": [
+    "- [Binary (Categorical/Contingency/Confusion Matrix) Scores](./Binary_Contingency_Scores.ipynb)\n",
     "- [FIRM](./FIRM.ipynb)\n",
-    "- [Binary (Categorical/Contingency/Confusion Matrix) Scores](./Binary_Contingency_Scores.ipynb)"
+    "- [SEEPS](.SEEPS.ipynb)"
    ]
   },
   {
