improve grammar in tutorial and set width of plot

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -145,15 +145,8 @@
     ]
    },
    "source": [
-    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b5052d34-9359-486a-982b-a3c11d147dd1",
-   "metadata": {},
-   "source": [
-    "## Processing"
+    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n",
+    "- [Block Bootstrapping](./Block_Bootstrapping.ipynb)"
    ]
   },
   {
