Adjustments to tutorial gallery cell metadata and rendering

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -145,25 +145,26 @@
     ]
    },
    "source": [
-    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n",
-    "- [Block Bootstrapping](./Block_Bootstrapping.ipynb)"
+    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "002323e9-0e61-449d-a0c5-950948bec4be",
+   "id": "63e2ed41-b27b-451b-8889-68f266be8584",
+   "metadata": {},
+   "source": [
+    "## Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e7905d6-0623-40dd-b76a-143969f34189",
    "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
     "tags": [
      "nbsphinx-gallery"
     ]
    },
    "source": [
-    "\n",
-    "## Processing\n",
     "- [Isotonic Regression and Reliability Diagrams](./Isotonic_Regression_And_Reliability_Diagrams.ipynb)\n",
     "- [Block Bootstrapping](./Block_Bootstrapping.ipynb)"
    ]
@@ -230,6 +231,14 @@
     "- [Angular Data](./Angular_data.ipynb)\n",
     "- [Introduction to Pandas API](./Pandas_API.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02b3405c-88c8-45d9-a999-e08039be6c93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
