--- a/tutorials/Risk_Matrix_Score.ipynb
+++ b/tutorials/Risk_Matrix_Score.ipynb
@@ -2667,7 +2667,7 @@
     "\n",
     "## Reference\n",
     "\n",
-    "Taggart, R. J. & Wilke, D. J. (2025). Warnings based on risk matrices: a coherent framework with consistent evaluation. In preparation."
+    "Taggart, R. J., & Wilke, D. J. (2025). Warnings based on risk matrices: a coherent framework with consistent evaluation. arXiv. https://doi.org/10.48550/arXiv.2502.08891"
    ]
   }
  ],
